cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__principal__test__concrete_entity_type_no_schema.snap
---
source: cedar-language-server/src/documentation/principal.rs
expression: docs.to_documentation_string(None)
---
# Principal

The principal element in a Cedar policy represents a user, service, or other identity
that can make a request to perform an action on a resource in your application. If the
principal making the request matches the principal defined in this policy statement,
then this element matches.

The principal element must be present. If you specify only principal without an expression
that constrains its scope, then the policy applies to any principal.

**Type**

Entity Type: `User`
